--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/react": "^2.3.0",
     "@remix-run/serve": "^2.3.0",
     "isbot": "^3.6.8",
+    "lucide-react": "^0.321.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "serpapi": "^2.0.0",
