--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "serpapi": "^2.0.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zodix": "^0.4.4"
   },
