--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@remix-run/eslint-config": "^2.3.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8.38.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.1.6"
